--- a/index.html
+++ b/index.html
@@ -1,74 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Suzzy Pay - Blockchain Wallet</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>SuzzyPay • Stand‑Alone Wallet</title>
+
+  <!-- Ethers.js (UMD build) -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.11.1/dist/ethers.umd.min.js"></script>
+
   <style>
-    body {
-      font-family: sans-serif;
-      background: #111;
-      color: #eee;
-      padding: 30px;
-    }
-    input, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      font-size: 1em;
-    }
-    #hash { word-wrap: break-word; color: lightgreen; }
+    body{margin:0;min-height:100vh;font-family:sans-serif;background:#111;color:#eee;padding:24px}
+    h2{margin-top:0}
+    input,button{padding:10px;margin:6px 0;width:100%;font-size:1rem}
+    button{cursor:pointer;background:#3470b2;border:none;color:#fff;border-radius:6px}
+    #log{white-space:pre-wrap;font-size:.9rem;color:#6f6}
   </style>
 </head>
 <body>
 
-<h2>🪙 SuzzyPay - Send ETH / MATIC</h2>
-<button onclick="connectWallet()">🔌 Connect Wallet</button>
-<p id="wallet">❌ Wallet not connected</p>
+<h2>🪙 SuzzyPay — Your Own‑Coin Wallet</h2>
+
+<!-- Wallet section -->
+<div id="walletSection">
+  <button onclick="generateWallet()">🎲 Create New Wallet</button>
+  <button onclick="importWallet()">📥 Import Wallet (private key)</button>
+  <p id="addr">No wallet loaded 🚫</p>
+</div>
 
 <hr>
 
-<h3>💸 Send Payment</h3>
-<input id="toAddress" placeholder="Receiver address (0x...)" />
-<input id="amount" placeholder="Amount (e.g. 0.01)" />
-<button onclick="sendPayment()">🚀 Send Payment</button>
+<!-- Balance -->
+<button onclick="showBalance()">🔄 Refresh Balance</button>
+<p id="bal">Balance: 0 SUZ</p>
 
-<p id="hash"></p>
+<!-- Send -->
+<h3>Send SUZ</h3>
+<input id="to" placeholder="Recipient 0x…"/>
+<input id="amt" placeholder="Amount (e.g. 5)"/>
+<button onclick="sendToken()">🚀 Send SUZ</button>
+
+<p id="log"></p>
 
 <script>
-  let provider, signer;
+/* ---------- CONFIG ---------- */
+const RPC_URL       = "https://polygon-mumbai.g.alchemy.com/v2/demo";      // replace with your Alchemy / Infura key
+const TOKEN_ADDRESS = "0xYourTokenAddress";                               // <— paste the ERC‑20 contract you deployed
+const TOKEN_ABI = [
+  "function balanceOf(address) view returns (uint256)",
+  "function transfer(address to, uint amount) returns (bool)"
+];
 
-  async function connectWallet() {
-    if (!window.ethereum) {
-      alert("Install MetaMask extension!");
-      return;
-    }
-    provider = new ethers.BrowserProvider(window.ethereum);
-    await provider.send("eth_requestAccounts", []);
-    signer = await provider.getSigner();
-    const address = await signer.getAddress();
-    document.getElementById("wallet").innerText = `✅ Connected: ${address}`;
+/* ---------- GLOBALS ---------- */
+const provider = new ethers.JsonRpcProvider(RPC_URL);
+let wallet;                   // ethers.Wallet instance (with provider)
+
+/* ---------- UTILS ---------- */
+const log = (m)=>document.getElementById("log").innerText = m;
+const saveKey = (pk)=>localStorage.setItem("suzzypay_pk", pk);
+const loadSaved = ()=>localStorage.getItem("suzzypay_pk");
+
+/* ---------- WALLET OPS ---------- */
+function generateWallet(){
+  wallet = ethers.Wallet.createRandom().connect(provider);
+  saveKey(wallet.privateKey);
+  showAddr();
+  log("New wallet generated.\nSave this private key:\n"+wallet.privateKey);
+}
+
+function importWallet(){
+  const pk = prompt("Paste your 0x… private key:");
+  if(!pk||!pk.startsWith("0x")||pk.length!==66) return alert("Invalid key");
+  wallet = new ethers.Wallet(pk, provider);
+  saveKey(pk);
+  showAddr();
+  log("Wallet imported.");
+}
+
+function showAddr(){
+  document.getElementById("addr").innerText = "Address: "+wallet.address;
+}
+
+/* ---------- BALANCE ---------- */
+async function showBalance(){
+  if(!wallet) return alert("Load or create a wallet first!");
+  const token = new ethers.Contract(TOKEN_ADDRESS, TOKEN_ABI, provider);
+  const bal   = await token.balanceOf(wallet.address);
+  document.getElementById("bal").innerText =
+        "Balance: "+ethers.formatUnits(bal,18)+" SUZ";
+}
+
+/* ---------- SEND TOKEN ---------- */
+async function sendToken(){
+  if(!wallet) return alert("Load or create a wallet first!");
+  const to   = document.getElementById("to").value.trim();
+  const amt  = document.getElementById("amt").value.trim();
+  if(!ethers.isAddress(to))  return alert("Bad recipient address");
+  if(!amt||isNaN(amt))       return alert("Enter amount");
+
+  try{
+    const token  = new ethers.Contract(TOKEN_ADDRESS, TOKEN_ABI, wallet);
+    const tx     = await token.transfer(to, ethers.parseUnits(amt,18));
+    log("Tx submitted:\n"+tx.hash+
+        "\n\nWaiting for confirmation…");
+    await tx.wait();
+    log("✅ Success! Tx hash:\n"+tx.hash);
+    showBalance();
+  }catch(e){
+    alert(e.message||e);
   }
+}
 
-  async function sendPayment() {
-    if (!signer) return alert("Please connect wallet first!");
-
-    const to = document.getElementById("toAddress").value.trim();
-    const amount = document.getElementById("amount").value.trim();
-
-    if (!ethers.isAddress(to)) return alert("Invalid address");
-
-    try {
-      const tx = await signer.sendTransaction({
-        to: to,
-        value: ethers.parseEther(amount)
-      });
-      document.getElementById("hash").innerHTML = `✅ TX Hash: <a href="https://mumbai.polygonscan.com/tx/${tx.hash}" target="_blank">${tx.hash}</a>`;
-    } catch (e) {
-      alert(e.message);
-    }
+/* ---------- AUTO‑LOAD SAVED KEY (if any) ---------- */
+window.addEventListener("load", ()=>{
+  const pk = loadSaved();
+  if(pk){
+    wallet = new ethers.Wallet(pk, provider);
+    showAddr();
+    showBalance();
   }
+});
 </script>
 
 </body>
