--- a/index.html
+++ b/index.html
@@ -2,60 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SuzzyPay • Firebase Wallet</title>
+
+  <!-- libraries -->
   <script src="https://cdn.jsdelivr.net/npm/qrcode@3.5.1/build/qrcode.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
+
+  <!-- icons & css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="dark">
 <div class="container">
 
+  <!-- header -->
   <header>
     <div class="logo"><i class="fas fa-wallet"></i><span>SuzzyPay</span></div>
     <button class="theme-toggle" id="themeToggle"><i class="fas fa-moon"></i></button>
   </header>
 
+  <!-- wallet controls -->
   <div class="card" id="walletCard">
     <h2 class="card-title"><i class="fas fa-key"></i> Wallet</h2>
+
     <div id="walletNotFound">
-      <button class="btn btn-primary btn-block" onclick="generateWallet()"><i class="fas fa-random"></i> Create Wallet</button>
-      <button class="btn btn-secondary btn-block" onclick="importWallet()"><i class="fas fa-file-import"></i> Import Key</button>
+      <button class="btn btn-primary btn-block" onclick="generateWallet()">
+        <i class="fas fa-random"></i> Create Wallet
+      </button>
+      <button class="btn btn-secondary btn-block" onclick="importWallet()">
+        <i class="fas fa-file-import"></i> Import Key
+      </button>
     </div>
+
     <div id="walletLoaded" class="hidden">
       <div class="form-group">
         <label>Your Address</label>
         <div class="address-display">
-          <span id="addr">…</span>
+          <span id="addr">...</span>
           <button class="copy-btn" onclick="copy('addr')"><i class="far fa-copy"></i></button>
         </div>
       </div>
       <div class="qr-container"><canvas id="qr"></canvas></div>
-      <button class="btn btn-danger btn-block" onclick="wipeWallet()"><i class="fas fa-trash"></i> Forget Wallet</button>
+      <button class="btn btn-danger btn-block" onclick="wipeWallet()">
+        <i class="fas fa-trash"></i> Forget Wallet
+      </button>
     </div>
   </div>
 
+  <!-- balance -->
   <div class="card hidden" id="balanceCard">
     <h2 class="card-title"><i class="fas fa-coins"></i> Balance</h2>
     <div class="balance-display" id="bal">0 SUZ</div>
     <button class="btn btn-primary btn-block" onclick="showBalance()"><i class="fas fa-sync-alt"></i> Refresh</button>
   </div>
 
+  <!-- send -->
   <div class="card hidden" id="sendCard">
     <h2 class="card-title"><i class="fas fa-paper-plane"></i> Send SUZ</h2>
-    <div class="form-group"><input id="to" placeholder="Receiver wallet address"></div>
-    <div class="form-group"><input id="amt" placeholder="Amount" type="number" step="0.01"></div>
+    <div class="form-group"><input id="to" placeholder="Receiver wallet (SUZ_…)" /></div>
+    <div class="form-group"><input id="amt" placeholder="Amount" type="number" step="0.01" /></div>
     <button class="btn btn-primary btn-block" onclick="sendToken()"><i class="fas fa-paper-plane"></i> Send</button>
   </div>
 
+  <!-- history -->
   <div class="card hidden" id="histCard">
     <h2 class="card-title"><i class="fas fa-history"></i> History</h2>
     <ul class="tx-list" id="txList"></ul>
     <div id="noTx" class="alert alert-info">No transactions yet.</div>
   </div>
 
+  <!-- log -->
   <div class="card" id="logCard">
     <h2 class="card-title"><i class="fas fa-terminal"></i> Log</h2>
     <pre id="log"></pre>
@@ -64,6 +82,7 @@
 </div>
 
 <script>
+/********  CONFIG  ********/
 const firebaseConfig = {
   apiKey: "AIzaSyBPF1VE82Y3VkZe6IibjqKxBC-XHjM_Wco",
   authDomain: "chat-2024-ff149.firebaseapp.com",
@@ -74,54 +93,50 @@ const firebaseConfig = {
   appId: "1:146349109253:web:e593afbf05847625"
 };
 firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
-const qs = id => document.getElementById(id);
-const SYMBOL = "SUZ";
+const db      = firebase.database();
+const SYMBOL  = "SUZ";
 
+/********  GLOBALS & HELPERS  ********/
 let address = null;
-
-const log = (m, c="gray") => {
+const qs = id => document.getElementById(id);
+const log = (m,c="gray") => {
   qs("log").innerHTML += `<span style="color:${c}">${new Date().toLocaleTimeString()} › ${m}</span>\n`;
   qs("log").scrollTop = qs("log").scrollHeight;
 };
-const copy = id => {
-  navigator.clipboard.writeText(qs(id).innerText).then(() => log("Copied"));
-};
+const copy = id => navigator.clipboard.writeText(qs(id).innerText).then(() => log("Copied"));
 
-function generateWallet() {
-  address = "SUZ_" + Math.random().toString(36).substring(2, 12);
+/********  WALLET OPS  ********/
+function generateWallet(){
+  address = "SUZ_" + Math.random().toString(36).substring(2,12);
   localStorage.setItem("suzzypay_address", address);
-  db.ref("wallets/" + address).set({ balance: 1000, created: Date.now() });
+  db.ref(`wallets/${address}`).set({ balance: 1000, created: Date.now() });
   afterWalletReady(true);
 }
 
-function importWallet() {
-  const a = prompt("Enter your wallet address");
-  if (!a || !a.startsWith("SUZ_")) return log("Invalid wallet address", "red");
+function importWallet(){
+  const a = prompt("Enter your wallet address (SUZ_…)");
+  if(!a || !a.startsWith("SUZ_")) return log("Invalid wallet address","red");
   address = a;
   localStorage.setItem("suzzypay_address", a);
-  db.ref("wallets/" + address).once("value", snap => {
-    if (!snap.exists()) db.ref("wallets/" + address).set({ balance: 0 });
+  db.ref(`wallets/${address}/balance`).once("value", snap => {
+    if(!snap.exists()) db.ref(`wallets/${address}/balance`).set(0);
     afterWalletReady(false);
   });
 }
 
-function loadSaved() {
+function loadSaved(){
   const a = localStorage.getItem("suzzypay_address");
-  if (a) {
-    address = a;
-    afterWalletReady(false);
-  }
+  if(a){ address = a; afterWalletReady(false); }
 }
 
-function wipeWallet() {
-  if (confirm("Remove wallet from this device?")) {
+function wipeWallet(){
+  if(confirm("Remove wallet from this device?")){
     localStorage.removeItem("suzzypay_address");
     location.reload();
   }
 }
 
-function afterWalletReady(fresh = true) {
+function afterWalletReady(isNew){
   qs("walletNotFound").classList.add("hidden");
   qs("walletLoaded").classList.remove("hidden");
   qs("balanceCard").classList.remove("hidden");
@@ -130,75 +145,75 @@ function afterWalletReady(fresh = true) {
 
   qs("addr").innerText = address;
   QRCode.toCanvas(qs("qr"), address, { width: 180 });
-  log(fresh ? "New wallet created" : "Wallet loaded", "green");
-  showBalance(); loadHistory();
+  log(isNew ? "New wallet created" : "Wallet loaded", "green");
+  showBalance();
+  loadHistory();
 }
 
-function showBalance() {
-  db.ref("wallets/" + address + "/balance").once("value", snap => {
+/********  BALANCE  ********/
+function showBalance(){
+  if(!address) return;
+  db.ref(`wallets/${address}/balance`).once("value", snap => {
     const bal = snap.val() || 0;
     qs("bal").innerText = `${bal} ${SYMBOL}`;
     log("Balance refreshed");
   });
 }
 
-async function sendToken() {
-  const to = qs("to").value.trim();
+/********  SEND TOKEN  ********/
+async function sendToken(){
+  const to  = qs("to").value.trim();
   const amt = parseFloat(qs("amt").value.trim());
 
-  if (!to || !to.startsWith("SUZ_")) return log("Invalid recipient", "red");
-  if (isNaN(amt) || amt <= 0) return log("Invalid amount", "red");
+  if(!to.startsWith("SUZ_")) return log("Invalid recipient","red");
+  if(isNaN(amt) || amt <= 0) return log("Invalid amount","red");
+  if(!address) return log("No wallet loaded","red");
 
-  try {
-    const senderRef = db.ref("wallets/" + address + "/balance");
-    const receiverRef = db.ref("wallets/" + to + "/balance");
-    const ts = firebase.database.ServerValue.TIMESTAMP;
+  try{
+    const senderBalSnap = await db.ref(`wallets/${address}/balance`).once("value");
+    const senderBal = senderBalSnap.val() || 0;
+    if(senderBal < amt) return log("Insufficient balance","red");
 
-    const senderTxn = await senderRef.transaction(current => {
-      if (current === null || current < amt) return;
-      return current - amt;
-    });
+    const recvBalSnap = await db.ref(`wallets/${to}/balance`).once("value");
+    const recvBal = recvBalSnap.val() || 0;
 
-    if (!senderTxn.committed) return log("Insufficient balance", "red");
+    const txId = db.ref().push().key;
+    const ts   = firebase.database.ServerValue.TIMESTAMP;
 
-    await receiverRef.transaction(cur => (cur || 0) + amt);
-
-    const txKey = db.ref().push().key;
     const updates = {
-      [`transactions/${address}/${txKey}`]: {
-        type: "sent", to, amount: amt, timestamp: ts
-      },
-      [`transactions/${to}/${txKey}`]: {
-        type: "received", from: address, amount: amt, timestamp: ts
-      }
+      [`wallets/${address}/balance`]: senderBal - amt,
+      [`wallets/${to}/balance`]     : recvBal + amt,
+      [`transactions/${address}/${txId}`]: { type:"sent",   to,   amount:amt, timestamp: ts },
+      [`transactions/${to}/${txId}`]    : { type:"received",from: address, amount:amt, timestamp: ts }
     };
+
     await db.ref().update(updates);
-    log(`Sent ${amt} SUZ to ${to}`, "green");
-    qs("to").value = ""; qs("amt").value = "";
+    log(`Sent ${amt} ${SYMBOL} to ${to.slice(0,6)}…`, "green");
+
+    qs("to").value=""; qs("amt").value="";
     showBalance(); loadHistory();
-  } catch (err) {
-    log("TX failed: " + err.message, "red");
-  }
+
+  }catch(err){ log("TX failed: "+ err.message, "red"); }
 }
 
-function loadHistory() {
-  db.ref("transactions/" + address).once("value", snap => {
-    const ul = qs("txList"); ul.innerHTML = "";
-    if (!snap.exists()) return qs("noTx").classList.remove("hidden");
+/********  HISTORY  ********/
+function loadHistory(){
+  qs("txList").innerHTML = "";
+  db.ref(`transactions/${address}`).once("value", snap => {
+    if(!snap.exists()) { qs("noTx").classList.remove("hidden"); return; }
     qs("noTx").classList.add("hidden");
 
-    Object.values(snap.val()).reverse().forEach(tx => {
-      const { to, from, amount, type, timestamp } = tx;
-      const date = new Date(timestamp).toLocaleString();
-      const line = `<li class="tx-item">
-        <div>${type === "sent" ? "To: " + to : "From: " + from} <small>${date}</small></div>
-        <div class="tx-amount ${type === "sent" ? "tx-sent" : "tx-received"}">${type === "sent" ? "-" : "+"}${amount} ${SYMBOL}</div>
-      </li>`;
-      ul.innerHTML = line + ul.innerHTML;
+    const txArray = Object.values(snap.val()).sort((a,b)=>b.timestamp-a.timestamp);
+    txArray.forEach(tx => {
+      const { type, to, from, amount, timestamp } = tx;
+      const other = type === "sent" ? to : from;
+      const line = `<li class='tx-item'><div>${type === "sent" ? "To:" : "From:"} ${other}<br><small>${new Date(timestamp).toLocaleString()}</small></div><div class='tx-amount ${type === "sent" ? "tx-sent":"tx-received"}'>${type === "sent" ? "-" : "+"}${amount} ${SYMBOL}</div></li>`;
+      qs("txList").innerHTML += line;
     });
   });
 }
 
+/********  INIT  ********/
 window.addEventListener("load", () => {
   loadSaved();
   qs("themeToggle").onclick = () => {
